@@ -123,6 +123,7 @@ TESTS =						\
   mb-dot-newline				\
   mb-non-UTF8-overrun				\
   mb-non-UTF8-performance			\
+  mb-non-UTF8-word-boundary			\
   multibyte-white-space				\
   multiple-begin-or-end-line			\
   null-byte					\
